style(*): fixed the spacing and the button color on home page

--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -46,6 +46,24 @@
   }
 }
 
+@mixin main-donate-button($color) {
+  @include header($color);
+  list-style-type: none;
+  text-decoration: none;
+  border: 2px solid $color;
+  color: $white;
+  padding: 1em;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  text-transform: uppercase;
+  font-weight: 700;
+  background-color: rgba( $color, .8);
+  &:hover {
+    background-color: rgba($color, 1);
+  }
+}
+
 @mixin donate-button($color) {
   font-family: $text;
   font-size: .7em;
